--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=clinica-veterinaria
 jwt.secretKey=This is my new token generated manually and needs to be much larger
 
-spring.datasource.url=jdbc:mysql://localhost:3306/clinica_veterinaria
+spring.datasource.url=jdbc:mysql://localhost:3306/clinica_veterinaria_dg?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +10,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql = true
