--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>clinica-veterinaria</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>clinica-veterinaria</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
