--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=clinica-veterinaria
 jwt.secretKey=This is my new token generated manually and needs to be much larger
 
-spring.datasource.url=jdbc:mysql://localhost:3306/clinica_veterinaria_dg_6?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://35.226.115.187:3306/clinica_veterinaria?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=springboot23.asa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate
